erDiagram
    LOCATIONS ||--o{ DEVICES : "menempatkan"
    DEVICES ||--o{ DEVICE_STATUS_HISTORIES : "mencatat riwayat"
    DEVICES ||--o{ SENSOR_INSTALLATIONS : "dipasangi"
    SENSOR_TYPES ||--o{ SENSORS : "mengklasifikasi"
    SENSORS ||--o{ SENSOR_INSTALLATIONS : "dipasang pada"
    SENSORS ||--o{ SENSOR_CALIBRATIONS : "memiliki riwayat kalibrasi"
    DEVICES ||--o{ SENSOR_READINGS : "mengirim"
    SENSORS ||--o{ SENSOR_READINGS : "menghasilkan"
    DEVICES ||--o{ READING_AGGREGATES : "diagregasi per"
    SENSORS ||--o{ READING_AGGREGATES : "diagregasi per"

    USERS {
        bigint id PK
        string name
        string email UK
        string password
        timestamp email_verified_at
        timestamp created_at
        timestamp updated_at
    }

    LOCATIONS {
        bigint id PK
        string name
        decimal latitude "10,7"
        decimal longitude "10,7"
        decimal altitude "8,2 nullable"
        timestamp created_at
        timestamp updated_at
    }

    DEVICES {
        bigint id PK
        string device_id UK
        string name
        bigint location_id FK
        enum status "provisioned|active|maintenance|decommissioned"
        string api_key_hash
        string firmware_version "nullable"
        decimal battery_v "4,2 nullable"
        integer rssi "nullable"
        timestamp last_seen_at "nullable"
        timestamp deleted_at "nullable, soft delete"
        timestamp created_at
        timestamp updated_at
    }

    DEVICE_STATUS_HISTORIES {
        bigint id PK
        bigint device_id FK
        enum status "provisioned|active|maintenance|decommissioned"
        text note "nullable"
        timestamp changed_at
    }

    SENSOR_TYPES {
        bigint id PK
        string code UK "temp_air, humidity, dll"
        string name
        string unit
        decimal min_value "10,4 nullable"
        decimal max_value "10,4 nullable"
        integer precision "default 2"
        timestamp created_at
        timestamp updated_at
    }

    SENSORS {
        bigint id PK
        string serial_number UK
        bigint sensor_type_id FK
        timestamp deleted_at "nullable, soft delete"
        timestamp created_at
        timestamp updated_at
    }

    SENSOR_INSTALLATIONS {
        bigint id PK
        bigint sensor_id FK
        bigint device_id FK
        timestamp installed_at
        timestamp removed_at "nullable"
        timestamp created_at
        timestamp updated_at
    }

    SENSOR_CALIBRATIONS {
        bigint id PK
        bigint sensor_id FK
        decimal offset "10,4 default 0"
        decimal scale "10,6 default 1"
        timestamp valid_from
        text note "nullable"
        timestamp created_at
        timestamp updated_at
    }

    SENSOR_READINGS {
        bigint id PK
        bigint device_id FK
        bigint sensor_id FK
        decimal raw_value "12,4"
        decimal calibrated_value "12,4 nullable"
        boolean quality_flag "default true"
        string quality_note "nullable"
        timestamp device_time
        timestamp server_time "default now"
        integer seq "nullable"
        timestamp created_at
        timestamp updated_at
    }

    READING_AGGREGATES {
        bigint id PK
        bigint device_id FK
        bigint sensor_id FK
        enum interval "1m|1h|1d"
        timestamp bucket_time
        decimal avg_value "12,4 nullable"
        decimal min_value "12,4 nullable"
        decimal max_value "12,4 nullable"
        decimal sum_value "12,4 nullable"
        integer count "default 0"
        timestamp created_at
        timestamp updated_at
    }
